--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,9 +21,9 @@ jobs:
       - attach_workspace:
           at: /tmp/workspace
       - run:
-        command: |
-          /tmp/workspace/out/add 1.txt 2.txt /tmp/workspace/3.txt
-          cat /tmp/workspace/3.txt
+        command: ls -al /tmp/workspace/out #|
+          #/tmp/workspace/out/add 1.txt 2.txt /tmp/workspace/3.txt
+          #cat /tmp/workspace/3.txt
 
 workflows:
   submit-gate:
