--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,6 @@ workflows:
   submit-gate:
     jobs:
       - build-gcc
-      - add_1_2:
-        requires:
-          - build-gcc
+        #      - add_1_2:
+        #        requires:
+        #          - build-gcc
